[package]
name = "chat"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"]}
reqwest = {version = "0.13", features = ["json", "gzip", "stream"]}
serde_json = "1"
futures-util = "0.3.31"
tower-http = {version = "0.6", features = ["fs"]}
bytes= "1"
